feat: modificar eventServiceImpl para actualizar la lista de eventos cuando se invita a un nuevo usuario